protocols/tests/identities/identity_d2/two_fork_ill_formed.out
error: Expected a to be a struct's output field,
                but a is not a field of a struct
   ┌─ identities/identity_d2/two_fork_ill_formed.prot:16:9
   │
16 │   if (!(a == 32'd0)) {
   │         ^ Expected a to be a struct's output field,
                but a is not a field of a struct

